--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
   			</ul>
   </div>
 
- <footer><p> Lista de tareas - Valentin Lusnich - 4to 1ra </p></footer>
- <button> </button>
+ <footer>
+  <p>Lista de tareas - Valentin Lusnich - 4to 1ra </p>
+<div class=link>
+  <a href= "https://github.com/valenlusnich3043/ListaTareas-Lusnich" type="button">GitHub </a>
+</div>
+</footer>
 
- <script src="lista.js"></script>
-</body>
-</html>
